feat:add model online function
